development-runs/374/k8s/prod/app-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: account-api-mongo
  name: account-api-mongo
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: account-api-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: account-api-mongo
    spec:
      containers:
        - image: mongo:6.0.5
          name: account-api-mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/mongo
              name: account-api-mongo-claim0
      volumes:
        - name: account-api-mongo-claim0
          persistentVolumeClaim:
            claimName: account-api-mongo-claim0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: account-api-mongo
  name: account-api-mongo
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-27017
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    io.kompose.service: account-api-mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: account-api
  name: account-api
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: account-api
  template:
    metadata:
      labels:
        io.kompose.service: account-api
    spec:
      containers:
        - env:
            - name: spring.cloud.config.uri
              value: http://config-server:8888/config-server
            - name: spring.profiles.active
              value: docker
          image: ralfx22/rrb-account-api
          imagePullPolicy: Always
          name: account-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  template:
    metadata:
      labels:
        io.kompose.service: api-gateway
    spec:
      containers:
        - env:
            - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
              value: TRACE
            - name: spring.cloud.config.uri
              value: http://config-server:8888/config-server
            - name: spring.profiles.active
              value: docker
          image: ralfx22/rrb-api-gateway
          imagePullPolicy: Always
          name: api-gateway
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    io.kompose.service: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: asset-management-api-mysql
  name: asset-management-api-mysql
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: asset-management-api-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: asset-management-api-mysql
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql:8.0.33
          name: asset-management-api-mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /data/mysql
              name: asset-management-api-mysql-claim0
      volumes:
        - name: asset-management-api-mysql-claim0
          persistentVolumeClaim:
            claimName: asset-management-api-mysql-claim0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: asset-management-api-mysql
  name: asset-management-api-mysql
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-3306
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    io.kompose.service: asset-management-api-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: asset-management-api
  name: asset-management-api
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: asset-management-api
  template:
    metadata:
      labels:
        io.kompose.service: asset-management-api
    spec:
      containers:
        - env:
            - name: spring.cloud.config.uri
              value: http://config-server:8888/config-server
            - name: spring.profiles.active
              value: docker
          image: ralfx22/rrb-asset-management-api
          imagePullPolicy: Always
          name: asset-management-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: config-server
  name: config-server
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: config-server
    spec:
      containers:
        - env:
            - name: spring.profiles.active
              value: docker
          image: ralfx22/rrb-config-server
          imagePullPolicy: Always
          name: config-server
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - mountPath: /app/resources/config-files
              name: config-server-claim0
      volumes:
        - name: config-server-claim0
          persistentVolumeClaim:
            claimName: config-server-claim0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: config-server
  name: config-server
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-8888
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    io.kompose.service: config-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: discovery-server
  name: discovery-server
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery-server
  template:
    metadata:
      labels:
        io.kompose.service: discovery-server
    spec:
      containers:
        - env:
            - name: spring.cloud.config.uri
              value: http://config-server:8888/config-server
            - name: spring.profiles.active
              value: docker
          image: ralfx22/rrb-discovery-server
          imagePullPolicy: Always
          name: discovery-server
          ports:
            - containerPort: 8761
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: discovery-server
  name: discovery-server
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-8761
      port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    io.kompose.service: discovery-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: grafana
  name: grafana
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: gf_security_admin_password
              value: password
            - name: gf_security_admin_user
              value: admin
          image: grafana/grafana:10.0.1
          name: grafana
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-claim0
      volumes:
        - name: grafana-claim0
          persistentVolumeClaim:
            claimName: grafana-claim0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: grafana
  name: grafana
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    io.kompose.service: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: notification-api-kafka
  name: notification-api-kafka
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-api-kafka
  template:
    metadata:
      labels:
        io.kompose.service: notification-api-kafka
    spec:
      containers:
        - env:
            - name: CLUSTER_ID
              value: MkU3OEVANTcwNTJENDM2Qk
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://notification-api-kafka:29092,HOST://localhost:9092
            - name: KAFKA_CONTROLLER_LISTENER_NAMES
              value: CONTROLLER
            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
              value: 1@notification-api-kafka:29093
            - name: KAFKA_LISTENERS
              value: PLAINTEXT://notification-api-kafka:29092,CONTROLLER://notification-api-kafka:29093,HOST://0.0.0.0:9092
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,HOST:PLAINTEXT
            - name: KAFKA_NODE_ID
              value: "1"
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_PROCESS_ROLES
              value: broker,controller
            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
              value: "1"
          image: confluentinc/cp-kafka:7.4.0
          name: notification-api-kafka
          ports:
            - containerPort: 9092
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: notification-api-kafka
  name: notification-api-kafka
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-9092
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    io.kompose.service: notification-api-kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: notification-api
  name: notification-api
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-api
  template:
    metadata:
      labels:
        io.kompose.service: notification-api
    spec:
      containers:
        - env:
            - name: spring.cloud.config.uri
              value: http://config-server:8888/config-server
            - name: spring.profiles.active
              value: docker
          image: ralfx22/rrb-notification-api
          imagePullPolicy: Always
          name: notification-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: prometheus
  name: prometheus
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
        - image: prom/prometheus:v2.43.0
          name: prometheus
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-claim0
      volumes:
        - name: prometheus-claim0
          persistentVolumeClaim:
            claimName: prometheus-claim0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: prometheus
  name: prometheus
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-9090
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    io.kompose.service: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redis
  name: redis
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:7.0.11
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-6379
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    io.kompose.service: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: transaction-api
  name: transaction-api
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-api
  template:
    metadata:
      labels:
        io.kompose.service: transaction-api
    spec:
      containers:
        - env:
            - name: spring.cloud.config.uri
              value: http://config-server:8888/config-server
            - name: spring.profiles.active
              value: docker
          image: ralfx22/rrb-transaction-api
          imagePullPolicy: Always
          name: transaction-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: transaction-api-postgres
  name: transaction-api-postgres
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-api-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: transaction-api-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: root
          image: postgres:15.2
          name: transaction-api-postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /data/postgres
              name: transaction-api-postgres-claim0
      volumes:
        - name: transaction-api-postgres-claim0
          persistentVolumeClaim:
            claimName: transaction-api-postgres-claim0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: transaction-api-postgres
  name: transaction-api-postgres
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-5432
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    io.kompose.service: transaction-api-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: zipkin
  name: zipkin
  namespace: rrb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin
  template:
    metadata:
      labels:
        io.kompose.service: zipkin
    spec:
      containers:
        - image: openzipkin/zipkin:2.24.0
          name: zipkin
          ports:
            - containerPort: 9411
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: zipkin
  name: zipkin
  namespace: rrb-app
spec:
  type: ClusterIP
  ports:
    - name: tcp-9411
      port: 9411
      protocol: TCP
      targetPort: 9411
  selector:
    io.kompose.service: zipkin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: rrb-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
